--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,24 +6,42 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:maxAspectRatio="2.4"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme"
-        android:maxAspectRatio="1.5"
-        android:resizeableActivity="false">
+        android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="android.allow_multiple_resumed_activities"
+            android:value="true"/>
+
+        <activity
+            android:name=".adaptive.AdaptiveActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout"/>
+
+
         <activity
             android:name=".AspectRatioActivity"
-            android:maxAspectRatio="1.35"
-            android:resizeableActivity="false"/>
-        <activity android:name=".MainActivity">
+            android:resizeableActivity="false" />
+
+
+
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout"
+            android:resizeableActivity="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".GetNavigationStateActivity"
-            android:resizeableActivity="false" />
+            android:resizeableActivity="true"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout"/>
+
     </application>
 
 </manifest>
